# computer-science

./: .envrc  README.md  a.out  bob-recv.pbm  pyproject.toml  requirements.txt  sprintf.c  update.sh
c/: a.out  ab_data_types.c  coords.txt  file_input.c  operators.c  types.c  user_input.c
c/3/: a.out  directives.c  main.c  program_flow.c  simple_math.c  simple_math.h
compiler-bug/: week34
compiler-bug/code/: pipeline.cpp  pipeline.hpp  smake  week34.cpp
compiler-bug/testcases/: bug.txt
dat1/DAT1-assessment/: Y3891128.ipynb  goldenLionTips.csv  honeyProduction.csv  tennis20192020.csv
dat1/formative/: DAT1-Formative Exam - Questions.ipynb  pencil.csv  rugby.csv  yorkBus.csv
dat1/week3/: ClassicCars.csv  (+2 more)
dat2/: lab 12.ipynb  lab-16.ipynb
evac/: PostWorkshop5Discussion.ipynb  Postworkshop7_discussionWithFitnessSharing.ipynb  Workshop2.ipynb  postWorkshop_6A_Discussion.ipynb  postworkshop_6B_discussion.ipynb  walkthrough4.ipynb
hci1/: HCIT - Information sheet template - 2020-21(1).docx
icry/: base64.txt  ct-aes-256-cbc.txt
int1/: connect4.py  test_functions.py  wk4.py  wk_4.py
int2/: Perceptron.hs
sof1/: test.txt  textanalysis.py  turtlefunctionstemplate.py  week1.py  week2.py  week4.py  week5-seminar-pseudocode.txt  week5.py  week6-seminar.py  week6-seminar.txt
sof2/: Backtracking.ipynb
sof3/: Block1Q.hs  new.hs  recursion.hs
sys1/: Logic_TB(2).vhd
sys2/: a.out  simple_fork.c
sys3labs/: exam  week56
sys4/: udpRelay.py
vico/: Vico_WeeK1Summer_matcap.xml  Vico_WeeK1Summer_sphere.xml  envmap_white.exr  gold_sphere.exr  mask.exr
(+338 files in other folders)
