[tool.poetry]
name = "computer science"
version = "0.1.0"
description = ""
authors = ["Thomas Pollak <tompollak1000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.1"
matplotlib = "^3.6.3"
pandas = "^1.5.3"
opencv-python = "^4.7.0.68"
plyfile = "^0.7.4"
deap = "^1.3.3"
scikit-learn = "^1.2.0"
xgboost = "^1.7.3"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
jupyter-nbextensions-configurator = "^0.6.1"
jupyter = "^1.0.0"
pytest = "^7.2.1"
isort = "^5.11.4"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


